--- a/pom.xml
+++ b/pom.xml
@@ -1,51 +1,65 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-   <modelVersion>4.0.0</modelVersion>
-   <groupId>dds-templates</groupId>
-   <artifactId>arena-proof-of-concept-template</artifactId>
-   <version>0.0.1-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>dds-grupo12</groupId>
+    <artifactId>TP-UI</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-  <repositories>
-    <repository>
-      <id>maven.uqbar.org-releases</id>
-      <name>maven.uqbar.org-releases</name>
-      <url>http://maven.uqbar.org/releases</url>
-    </repository>
-    <repository>
-      <snapshots />
-      <id>maven.uqbar.org-snapshots</id>
-      <name>maven.uqbar.org-snapshots</name>
-      <url>http://maven.uqbar.org/snapshots</url>
-    </repository>
-  </repositories>
+    <repositories>
+        <repository>
+            <id>maven.uqbar.org-releases</id>
+            <name>maven.uqbar.org-releases</name>
+            <url>http://maven.uqbar.org/releases</url>
+        </repository>
+        <repository>
+            <snapshots/>
+            <id>maven.uqbar.org-snapshots</id>
+            <name>maven.uqbar.org-snapshots</name>
+            <url>http://maven.uqbar.org/snapshots</url>
+        </repository>
+    </repositories>
 
-  <dependencies>
-    <dependency>
-      <groupId>org.uqbar-project</groupId>
-      <artifactId>arena-jface</artifactId>
-      <version>3.6.3</version>
-    </dependency>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>org.uqbar-project</groupId>
+            <artifactId>arena-jface</artifactId>
+            <version>3.6.3</version>
+        </dependency>
 
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.1</version>
-        <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
-  
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sun.jersey</groupId>
+            <artifactId>jersey-client</artifactId>
+            <version>1.8</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
